# ai-career-assistant

./: .coderabbit.yaml  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  FINAL_PROJECT_STATUS.md  LICENSE  MODERN_SETUP_SUMMARY.md  Makefile  PROJECT_STATUS_REPORT.md  README.md  app.py  config.yaml  dev-setup.sh  dev-tools.ps1  main.py  main_backup.py  main_broken.py  main_clean.py  main_fixed.py  main_new.py  project_tree.txt  pyproject.toml  quality-check.ps1  requirements-dev.txt  requirements.txt  setup.sh  sonar-project.properties  test-results.xml  test_scores.py  test_scoring_manual.py  tree_generator.py  vscode-extensions.json
.github/workflows/: quality.yml
docs/: EPIC_27_COMPLETION_REPORT.md  FINAL_PROJECT_STATUS.md  MODERN_SETUP_SUMMARY.md  SONARQUBE_SETUP.md
examples/: test_scores.py  test_scoring_manual.py
prompts/: cv_analysis_prompt.md  rerank_prompt.md
scripts/: mcp_tools.py
src/: __init__.py  cli.py  config.py  constants.py  cv_analyzer.py  cv_processor.py  data_collector.py  data_collector_fixed.py  embedding_service.py  exceptions.py  filter.py  intelligent_scoring.py  logger_config.py  persona_builder.py  pipeline.py  reporting.py  vector_store.py  vector_store_clean.py
src/models/: pipeline_context.py
src/utils/: file_helpers.py  json_helpers.py  prompt_loader.py
tests/: test_cli.py  test_config.py  test_coverage_boost.py  test_cv_analyzer.py  test_cv_analyzer_fixed.py  test_cv_analyzer_simple.py  test_cv_processor.py  test_data_collector.py  test_data_collector_single_site.py  test_embedding_service.py  test_filter.py  test_logger_config.py  test_main.py  test_persona_builder.py  test_pipeline.py  test_pipeline_coverage.py  test_pipeline_private.py  test_reporting.py  test_reporting_deduplication.py  test_scoring.py  test_vector_store.py
tests/utils/: test_file_helpers.py
